<resources>
    <string name="common_app_title">Agora Convo AI</string>
    <string name="common_detail_message_list_you">You</string>
    <string name="common_debug_base_config">Basic Settings</string>
    <string name="common_debug_cov_config">ConvoAI Settings</string>
    <string name="common_debug_overall_config">Overall Config</string>
    <string name="common_debug_user_config">User Config</string>
    <string name="common_debug_quick_setting_for_current_user">Debug options for the current user</string>
    <string name="common_debug_click_to_copy">Copy</string>
    <string name="common_debug_mode_enable">Developer mode enabled</string>
    <string name="common_debug_mode_disable">Developer mode disabled</string>
    <string name="common_debug_setting">Developer Mode</string>
    <string name="common_debug_app_version">App Version</string>
    <string name="common_debug_application_id">Application ID</string>
    <string name="common_debug_rtc_version">RTC SDK Version</string>
    <string name="common_debug_rtm_version">RTM SDK Version</string>
    <string name="common_debug_switch_server">Switch Environment</string>
    <string name="common_debug_current_server">Switched to %1$s</string>
    <string name="common_debug_switch_tips">Switch environments before starting a conversation.</string>
    <string name="common_debug_convoai_host">ConvoAI Host</string>
    <string name="common_debug_ains">On-device AINS</string>
    <string name="common_debug_audio_dump">Audio Dump</string>
    <string name="common_debug_audio_scenario">Client Audio Scenario</string>
    <string name="common_debug_server_audio_scenario">Server Audio Scenario</string>
    <string name="common_debug_audio_scenario_not_selected">No Override</string>
    <string name="common_debug_session_limit">Session Duration Limit</string>
    <string name="common_debug_metrics">Metrics</string>
    <string name="common_debug_graph_id">Graph ID</string>
    <string name="common_debug_sdk_parameters">SDK Audio Parameters</string>
    <string name="common_debug_sc_config">ConvoAI Service Preset</string>
    <string name="common_debug_convoai_request_base_url">ConvoAI Request Base URL</string>
    <string name="common_debug_convoai_request_base_url_desc">Leave empty to use the default address. Overrides the base URL for ConvoAI and Token requests.</string>
    <string name="common_debug_convoai_request_header">X-Service-Namespace</string>
    <string name="common_debug_convoai_request_header_desc">Leave empty to keep the existing headers. Sets X-Service-Namespace and preserves other headers.</string>
    <string name="common_debug_convoai_request_header_hint">Enter service namespace</string>
    <string name="common_debug_close">Turn Off Developer Mode</string>
    <string name="common_debug_copy_user_question">User Messages in Current Session</string>
    <string name="common_call_time_is_up">Time\'s Up!</string>
    <string name="common_call_time_is_up_tips">Each session is limited to %1s minutes. Start a new conversation after closing this window.</string>
    <string name="common_i_known">Got it.</string>
    <string name="common_close">Close</string>
    <string name="common_preview">Preview</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>

    <string name="common_login_chat">Unlock \u221E Free Chat</string>
    <string name="common_login_chat_tips">""</string>
    <string name="common_login_with_agora_sso">Login</string>
    <string name="common_sign_up_for_free">Sign up for free</string>
    <string name="common_acceept">I accept the</string>
    <string name="common_terms_of_services">Terms of Services</string>
    <string name="common_and">and</string>
    <string name="common_privacy_policy">Privacy Policy.</string>
    <string name="common_terms_tips">Read me first</string>

    <string name="common_logout_confirm_title">You will be logged out</string>
    <string name="common_logout_confirm_text">You\'ll need to sign in again to use all features. Log out now?</string>
    <string name="common_logout_confirm_known">Log out</string>
    <string name="common_logout_confirm_cancel">Cancel</string>
    <string name="common_limit_time">Session Limit: %d minutes.</string>
    <string name="common_limit_time_none">Session Limit: None.</string>
    <string name="common_upload_time_success">We\'ve received your report. Thanks for helping us improve!</string>
    <string name="common_upload_time_failed">Opps! Something went wrong. Please try reporting again.</string>
    <string name="common_login_expired">Your session has expired. Please log in again.</string>
    <string name="common_login_typing_text1">Hey, I\'m Conversational AI Engine.</string>
    <string name="common_login_typing_text2">Have you ever questioned the nature of your reality?</string>
    <string name="common_app_version">v%1s</string>
    <string name="common_app_build_no">Build %1s</string>
    <string name="common_app_no_more_reminder">Don\'t show again</string>
    <string name="common_debug_app_id">App ID (VID)</string>
    <string name="common_debug_not_selected">Not selected</string>
    <string name="common_debug_unavailable">Unavailable</string>
    <string name="common_debug_load_app_ids_failed">Failed to load App IDs. Please try again.</string>
    <string name="common_debug_copied">Copied</string>
    <string name="common_debug_sdk_parameters_hint">JSON objects separated by |</string>
    <string name="common_debug_convoai_request_base_url_hint">https://api.example.com</string>
    <string name="common_debug_field_saved">%1$s saved</string>
    <string name="common_debug_field_cleared">%1$s cleared</string>
    <string name="common_debug_field_enabled">%1$s enabled</string>
    <string name="common_debug_field_disabled">%1$s disabled</string>
    <string name="common_debug_preset_hint">sess_ctrl_dev</string>
    <string name="common_debug_graph_hint">1.3.0-12-ga443e7e</string>
</resources>
