<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_login_dialog_bg"
    android:orientation="vertical"
    tools:theme="@style/Theme.AppCompat">

    <ImageView
        android:id="@+id/ivAppLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:padding="16dp"
        android:src="@drawable/ai_login_icon"
        app:layout_constraintBottom_toTopOf="@+id/layoutSSO"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@+id/layoutSSO"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:src="@drawable/common_icon_rounded_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/layoutSSO"
        app:layout_constraintTop_toTopOf="@+id/ivAppLogin"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@+id/ivAppLogin"
        app:layout_constraintBottom_toBottomOf="@+id/ivAppLogin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoginForChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_login_chat"
            android:textColor="@color/ai_icontext1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoginForChatTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/common_login_chat_tips"
            android:textColor="@color/ai_icontext1"
            android:lineSpacingExtra="5dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSSO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.84"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvCheckTips"
        android:layout_marginBottom="6dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginSSO"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/common_login_with_agora_sso"
            android:textAllCaps="false"
            android:textColor="@color/ai_icontext_inverse1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/ai_icontext1"
            app:cornerRadius="12dp"
            android:gravity="center"
            android:paddingHorizontal="0dp"
            app:rippleColor="#803e3e4d" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/common_sign_up_for_free"
            android:textAllCaps="false"
            android:textColor="@color/ai_icontext1"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/ai_line2"
            app:backgroundTint="@color/ai_fill5"
            app:cornerRadius="12dp"
            android:gravity="center"
            android:paddingHorizontal="0dp"
            app:rippleColor="#80FFFFFF" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvCheckTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:background="@drawable/app_agree_bg_tips"
        android:gravity="center"
        android:textColor="@color/ai_icontext_inverse1"
        android:textSize="14sp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:text="@string/common_terms_tips"
        app:layout_constraintBottom_toTopOf="@+id/layoutAgreeTerms"
        app:layout_constraintStart_toStartOf="@+id/layoutSSO" />

    <LinearLayout
        android:id="@+id/layoutAgreeTerms"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvCheckTips"
        app:layout_constraintStart_toStartOf="@+id/layoutSSO"
        app:layout_constraintEnd_toEndOf="@+id/layoutSSO">

        <CheckBox
            android:id="@+id/cb_terms"
            android:layout_width="26dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:button="@null"
            android:drawableStart="@drawable/agent_terms_cb_selector" />

        <TextView
            android:id="@+id/tv_terms_rich_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/common_acceept"
            android:breakStrategy="high_quality"
            android:hyphenationFrequency="none"
            android:justificationMode="inter_word"
            android:textColor="@color/ai_icontext1"
            android:textSize="14sp"
            android:lineSpacingExtra="2dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>