<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#0A0A0A">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <ImageView
        android:id="@+id/iv_agent_sample"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="375:352"
        android:background="@drawable/common_ic_agent_sample"
        app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <io.agora.scene.common.ui.widget.TypewriterTextView
        android:id="@+id/tvTyping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:breakStrategy="simple"
        android:hyphenationFrequency="normalFast"
        android:lineSpacingExtra="2dp"
        android:lineSpacingMultiplier="1.1"
        android:textColor="@color/ai_icontext1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.84" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginSSO"
        android:layout_width="0dp"
        android:layout_height="@dimen/ai_dp_large"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/common_login_with_agora_sso"
        android:textAllCaps="false"
        android:textColor="@color/ai_brand_white10"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/selector_gradient_button_with_border20"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.84"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="88dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="0dp"
        app:rippleColor="#803e3e4d"
        android:letterSpacing="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="@dimen/ai_dp_large"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/common_sign_up_for_free"
        android:textAllCaps="false"
        android:textColor="@color/ai_icontext1"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@null"
        android:background="@drawable/selector_gradient_dark_button_with_border20"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCheckTips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.84"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:paddingHorizontal="0dp"
        app:rippleColor="#80FFFFFF"
        android:letterSpacing="0.0" />


    <TextView
        android:id="@+id/tvCheckTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:background="@drawable/app_agree_bg_tips"
        android:gravity="center"
        android:text="@string/common_terms_tips"
        android:textColor="@color/ai_icontext_inverse1"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/layoutAgreeTerms"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/layoutAgreeTerms"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp">

        <CheckBox
            android:id="@+id/cb_terms"
            android:layout_width="26dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:button="@null"
            android:drawableStart="@drawable/agent_terms_cb_selector" />

        <TextView
            android:id="@+id/tv_terms_rich_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:breakStrategy="simple"
            android:hyphenationFrequency="none"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="2dp"
            android:text="@string/common_acceept"
            android:textColor="@color/ai_icontext1"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view_top"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>